[gd_scene load_steps=2 format=2]

[ext_resource path="res://Puzzle/Interface/AdicionarBlocoModal/AdicionarBloco.gd" type="Script" id=1]

[node name="AdicionarBloco" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 440.0
margin_top = 256.0
margin_right = 581.0
margin_bottom = 324.0
size_flags_horizontal = 3

[node name="WalkButton" type="Button" parent="VBoxContainer"]
margin_right = 141.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( -66, 16 )
text = "ANDA"

[node name="RotateCounter" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 141.0
margin_bottom = 44.0
text = "GIRA ANTIHORARIO"

[node name="Rotate" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 141.0
margin_bottom = 68.0
text = "GIRIA HORARIO"

[node name="Close" type="Button" parent="."]
margin_left = 448.0
margin_top = 216.0
margin_right = 569.0
margin_bottom = 236.0
text = "x"

[connection signal="pressed" from="VBoxContainer/WalkButton" to="." method="_on_WalkButton_pressed"]
[connection signal="pressed" from="VBoxContainer/RotateCounter" to="." method="_on_RotateCounter_pressed"]
[connection signal="pressed" from="VBoxContainer/Rotate" to="." method="_on_Rotate_pressed"]
[connection signal="pressed" from="Close" to="." method="_on_Close_pressed"]
